--- a/fronted/src/index.css
+++ b/fronted/src/index.css
@@ -1,6 +1,10 @@
 html,body{
   margin:0;
   padding:0;
-  background:#112A46;
-  color:#ACC8E5;
+  background:#fff;
+  color:#000;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
